--- a/static/change-password.html
+++ b/static/change-password.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Registration</h1>
+    <h1>Change Password</h1>
     <form id="reg-form">
-        <input type="text" autocomplete="off" id="username" placeholder="Username">
         <input type="password" autocomplete="off" id="password" placeholder="Password">
         <input type="submit" value="Submit Form">
     </form>
@@ -21,17 +20,17 @@
         // send data as JSON (very common when you're using JS)
         async function registerUser(event) {
             event.preventDefault()
-            const username = document.getElementById('username').value
             const password = document.getElementById('password').value
 
-            const result = await fetch('/api/register', {
+            const result = await fetch('/api/change-password', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                    username,
-                    password
+                    newpassword: password,
+                    // XSS -> CSP .., sanitizing the user input
+                    token: localStorage.getItem('token')
                 })
             }).then((res) => res.json())
 
