--- a/static/login.html
+++ b/static/login.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
-    <h1>Registration</h1>
-    <form id="reg-form">
+    <h1>Login</h1>
+    <form id="login">
         <input type="text" autocomplete="off" id="username" placeholder="Username">
         <input type="password" autocomplete="off" id="password" placeholder="Password">
         <input type="submit" value="Submit Form">
     </form>
 
     <script>
-        const form = document.getElementById('reg-form')
-        form.addEventListener('submit', registerUser)
+        const form = document.getElementById('login')
+        form.addEventListener('submit', login)
 
         // send data as JSON (very common when you're using JS)
-        async function registerUser(event) {
+        async function login(event) {
             event.preventDefault()
             const username = document.getElementById('username').value
             const password = document.getElementById('password').value
 
-            const result = await fetch('/api/register', {
+            const result = await fetch('/api/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -37,6 +37,8 @@
 
             if (result.status == 'ok') {
                 // everything went fine
+                console.log('Got the token: ', result.data)
+                localStorage.setItem('token', result.data)
                 alert('Success')
             } else {
                 alert (result.error)
